--- a/public/styles/sass/master/_brandguide.scss
+++ b/public/styles/sass/master/_brandguide.scss
@@ -10,7 +10,7 @@ $secondary-font: 'Montserrat';
 *********************************/
 
 $default-color: #ffffff;
-$brand-color: #E74949;
+$brand-color: #2eb6f5;
 $brand-title: #4c525b;
 $brand-text: #343638;
 $brand-background: #39b766;
